# ssdc-dashboard

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
app_pages/: common.py  executive_overview.py  placement_performance.py  selection_monitoring.py  talent_matching.py  talent_request_management.py
components/: carbon_ui.py  charts.py  filters.py  states.py  tables.py  ui.py
components/ssdc-carbon-components/: MANIFEST.in  README.md  example.py  pyproject.toml
components/ssdc-carbon-components/ssdc_carbon_components/: __init__.py  pyproject.toml
components/ssdc-carbon-components/ssdc_carbon_components/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
components/ssdc-carbon-components/ssdc_carbon_components/frontend/src/: index.ts  styles.css
config/: settings.py  theme.py
data/: __init__.py  contracts.py  loaders.py  mock_data.py
docs/: dashboard_spec.md  data_contract.md  decisions.md  kpi_dictionary.md
pages/: __init__.py  executive_overview.py  placement_performance.py  selection_monitoring.py  talent_matching.py  talent_request_management.py
services/: __init__.py  analytical_tables.py  analytics.py  semantic_matching.py
tests/: test_analytical_tables.py  test_analytics.py  test_carbon_ui.py  test_charts.py  test_layout.py  test_loaders.py  test_metrics.py  test_selection_monitoring.py  test_semantic_matching.py  test_spacing.py  test_surfaces.py  test_typography.py
