[project]
name = "ssdc-dashboard"
version = "0.1.0"
description = "SSDC 2026 Streamlit dashboard prototype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "pyarrow>=15",
    "sentence-transformers>=3",
    "streamlit>=1.42",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
