[project]
name = "ssdc-dashboard"
version = "0.1.0"
description = "SSDC 2026 Streamlit dashboard prototype"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "ssdc-carbon-components",
    "streamlit>=1.59",
]

[tool.uv.sources]
ssdc-carbon-components = { path = "components/ssdc-carbon-components" }

[dependency-groups]
dev = [
    "pytest>=8.3",
]
